fix bug where inputs overflow from calc-screen

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 }
 
 .calc-screen {
-    width: 100%;
+    width: 98%;
     height: 35%;
     background-color: white; /*change to white later*/
     display: flex;
@@ -34,6 +34,7 @@
     align-items: flex-end;
     padding: 2.1875em 3.3125em 0 0;
     border-radius: 5%;
+    overflow-x: hidden;
 }
 
 .current {
